--- a/painel/Cargo.toml
+++ b/painel/Cargo.toml
@@ -4,3 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+egui = "0.29.1"
+egui_extras = { version = "0.29.1", features = ["svg"] }
+eframe = { version = "0.29.1", default-features = false, features = [
+    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
+    "default_fonts", # Embed the default egui fonts.
+    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
+    "persistence",   # Enable restoring app state when restarting the app.
+] }
+
+walkers = "0.30.0"
