--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -1,3 +1,5 @@
+name: iotfiware
+
 services:
   # Data bases
   mongo-db:
@@ -6,6 +8,8 @@ services:
     command: --nojournal
     hostname: mongo-db
     container_name: fiware-mongo
+    networks:
+      - default  
     ports:
       - "27017:27017"
     volumes:
@@ -17,6 +21,8 @@ services:
     restart: always
     hostname: orion
     container_name: fiware-orion
+    networks:
+      - default  
     depends_on:
       - mongo-db
     ports:
@@ -29,6 +35,8 @@ services:
     restart: always
     hostname: mosquitto
     container_name: fiware-mosquitto
+    networks:
+      - default  
     expose:
       - "1883"
       - "9001"
@@ -44,30 +52,41 @@ services:
     restart: always
     hostname: iot-agent
     container_name: fiware-iot-agent
+    networks:
+      - default
     depends_on:
       - mongo-db
-      - orion
       - mosquitto
     expose:
       - "4041"
     ports:
       - "4041:4041"
     environment:
+      # Mongo
+      - IOTA_REGISTRY_TYPE=mongodb
       - IOTA_MONGO_HOST=mongo-db
       - IOTA_MONGO_PORT=27017
       - IOTA_MONGO_DB=iotagentul
+      # Orion
       - IOTA_CB_HOST=orion
       - IOTA_CB_PORT=1026
+      - IOTA_CB_NGSI_VERSION=v2
+      # MQTT
+      - IOTA_DEFAULT_TRANSPORT=MQTT
+      - IOTA_MQTT_HOST=mosquitto
+      - IOTA_MQTT_PORT=1883
       - IOTA_NORTH_PORT=4041
       - IOTA_LOG_LEVEL=DEBUG
       - IOTA_TIMESTAMP=true
-      - IOTA_CB_NGSI_VERSION=v2
       - IOTA_AUTOCAST=true
       - IOTA_PROVIDER_URL=http://iot-agent:4041
-      - IOTA_MQTT_HOST=mosquitto
-      - IOTA_MQTT_PORT=1883
+  
+      - IOTA_DEFAULT_RESOURCE=/iot/d
+
+networks:
+  default:
+    labels:
+      org.fiware: 'fiware'
 
 volumes:
-  db-data:
-  
-
+  db-data: ~
